2011-06-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add support for goodness-of-fit calculations to make-plots.
	The results are shown in the legend, and one histogram can
	be selected to determine the color of the plot margin. See
	the documentation for more details.

2011-06-04  Andy Buckley  <andy@insectnation.org>

	* Adding auto conversion of Histogram2D to DataPointSets in the
	AnalysisHandler _normalizeTree method.

2011-06-03  Andy Buckley  <andy@insectnation.org>

	* Adding a file-weight feature to the Run object, which will
	optionally rescale the weights in the provided HepMC files. This
	should be useful for e.g. running on multiple differently-weighted
	AlpGen HepMC files/streams. The new functionality is used by the
	rivet command via an optional weight appended to the filename with
	a colon delimiter, e.g. "rivet fifo1.hepmc fifo2.hepmc:2.31"

2011-06-01  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Add BeamThrust projection

2011-05-31  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Fix LIBS for fastjet-3.0

	* Add basic infrastructure for Taylor plots in make-plots

	* Fix OPAL_2004_S6132243: They are using charged+neutral.

	* Release 1.5.1

2011-05-22  Andy Buckley  <andy@insectnation.org>

	* Adding plots of stable and decayed PID multiplicities to
	MC_GENERIC (useful for sanity-checking generator setups).

	* Removing actually-unused ProjectionApplier.fhh forward
	declaration header.

2011-05-20  Andy Buckley  <andy@insectnation.org>

	* Removing import of ipython shell from rivet-rescale, having just
	seen it throw a multi-coloured warning message on a student's
	lxplus Rivet session!

	* Adding support for the compare-histos --no-ratio flag when using
	rivet-mkhtml. Adding --rel-ratio, --linear, etc. is an exercise
	for the enthusiast ;-)

2011-05-10  Andy Buckley  <andy@insectnation.org>

	* Internal minor changes to the ProjectionHandler and
	ProjectionApplier interfaces, in particular changing the