@@ -10,7 +10,7 @@ namespace Rivet {
 
 
   Run::Run(AnalysisHandler& ah)
-    : _ah(ah), _fileweight(1.0), _xs(-1.0)
+    : _ah(ah), _fileweight(1.0), _xs(NAN)
   { }
 
 
@@ -107,7 +107,7 @@ namespace Rivet {
   bool Run::processEvent() {
     // Set cross-section if found in event and not from command line
     #ifdef HEPMC_HAS_CROSS_SECTION
-    if (_xs < 0.0 && _evt->cross_section()) {
+    if (std::isnan(_xs) && _evt->cross_section()) {
       const double xs = _evt->cross_section()->cross_section(); //< in pb
       Log::getLog("Rivet.Run")
         << Log::DEBUG << "Setting cross-section = " << xs << " pb" << endl;
