@@ -1,3 +1,7 @@
+2011-06-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>
+
+	* Allow for negative cross-sections. NLO tools need this.
+
 2011-06-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>
 
 	* Add support for goodness-of-fit calculations to make-plots.
